V3085: Aggiustamenti in Overallview, P464,P474, P510, P520, Plantview, Waterview

--- a/Prevu.Synoptics.V3085_Anviplas/OverallView.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/OverallView.xaml
@@ -52,8 +52,8 @@
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="7701" Canvas.Top="1423" PipeHeight="Medium" Width="134" StatusComponent="544-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="7706" Canvas.Top="2742" PipeHeight="Medium" Width="129" StatusComponent="564-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="7826" Canvas.Top="1781" PipeHeight="Medium" Width="209" StatusComponent="564-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="7673" Canvas.Top="1575" PipeHeight="Medium" Width="314" RenderTransformOrigin="0.5,0.5" StatusComponent="544-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="7826" Canvas.Top="1775" PipeHeight="Medium" Width="209" StatusComponent="564-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="7676" Canvas.Top="1572" PipeHeight="Medium" Width="308" RenderTransformOrigin="0.5,0.5" StatusComponent="544-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -63,7 +63,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="7346" Canvas.Top="2261" PipeHeight="Medium" Width="968" RenderTransformOrigin="0.5,0.5" StatusComponent="564-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="7343" Canvas.Top="2258" PipeHeight="Medium" Width="974" RenderTransformOrigin="0.5,0.5" StatusComponent="564-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -73,7 +73,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2747" Canvas.Top="2518" Width="83" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="2747" Canvas.Top="2595" Width="166" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="2498" Canvas.Top="1402" Width="502" Color="Water" StatusComponent="291-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -84,7 +84,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2330" Canvas.Top="2101" Width="838" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Center" StatusComponent="291-01-MA1">
+        <Labels:Pipe Canvas.Left="2291" Canvas.Top="2139" Width="916" Color="Water" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top" StatusComponent="291-01-MA1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -94,8 +94,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="3140" Canvas.Top="1768" Width="1056" Color="Water" StatusComponent="453-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="2971" Canvas.Top="1938" Width="1566" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="3140" Canvas.Top="1767" Width="781" Color="Water" StatusComponent="453-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="3075" Canvas.Top="1938" Width="1368" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="2548" Canvas.Top="1175" Width="1188" Color="Water" StatusComponent="453-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -106,7 +106,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="2822" Canvas.Top="2087" Width="302" Color="Water" StatusComponent="457-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="2896" Canvas.Top="2117" Width="362" Color="Water" StatusComponent="457-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -116,7 +116,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="4448" Canvas.Top="1853" Width="175" Color="Water" StatusComponent="457-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="4353" Canvas.Top="1853" Width="175" Color="Water" StatusComponent="457-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -127,7 +127,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="4257" Canvas.Top="767" Width="104" Color="Water" StatusComponent="431-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4208" Canvas.Top="916" Width="302" Color="Water" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="4193" Canvas.Top="931" Width="332" Color="Water" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -138,7 +138,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="4264" Canvas.Top="725" Width="117" Color="Water" StatusComponent="432-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4196" Canvas.Top="905" Width="365" Color="Water" StatusComponent="432-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="4181" Canvas.Top="920" Width="395" Color="Water" StatusComponent="432-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -179,10 +179,10 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="4430" Canvas.Top="1204" Width="615" Color="Water" StatusComponent="460-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4447" Canvas.Top="1281" Width="598" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4270" Canvas.Top="1204" Width="775" Color="Water" StatusComponent="460-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4291" Canvas.Top="1281" Width="754" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5041" Canvas.Top="1635" Width="160" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="5524" Canvas.Top="1532" Width="56" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="6046" Canvas.Top="1948" Width="64" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -214,7 +214,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="5550" Canvas.Top="1506" Width="406" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="5952" Canvas.Top="1506" Width="322" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5893" Canvas.Top="667" Width="122" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -225,7 +225,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="5353" Canvas.Top="1789" Width="398" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="6064" Canvas.Top="1712" Width="416" Color="Water" StatusComponent="482-21-CV1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -235,13 +235,12 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="5877" Canvas.Top="1986" Width="203" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="5550" Canvas.Top="1986" Width="299" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="5018" Canvas.Top="2389" Width="1522" Color="Water" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="6076" Canvas.Top="1918" Width="198" Color="Water" StatusComponent="482-21-CV1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4973" Canvas.Top="2389" Width="1567" Color="Water" StatusComponent="529-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
-        <Labels:Pipe Canvas.Left="3867" Canvas.Top="1065" Width="494" Color="Water" StatusComponent="431-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="3886" Canvas.Top="1085" Width="495" Color="Water" StatusComponent="432-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="3744" Canvas.Top="1188" Width="250" Color="Water" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="3720" Canvas.Top="1095" Width="641" Color="Water" StatusComponent="431-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="3739" Canvas.Top="1115" Width="642" Color="Water" StatusComponent="432-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="3612" Canvas.Top="1203" Width="220" Color="Water" StatusComponent="431-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -251,7 +250,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="3763" Canvas.Top="1208" Width="250" Color="Water" StatusComponent="432-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Canvas.Left="3631" Canvas.Top="1223" Width="220" Color="Water" StatusComponent="432-01-MA1" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -261,7 +260,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="4753" Canvas.Top="1358" Width="277" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4607" Canvas.Top="1358" Width="423" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5055" Canvas.Top="1358" Width="78" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5167" Canvas.Top="1358" Width="778" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="5964" Canvas.Top="1358" Width="78" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -276,8 +275,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="6038" Canvas.Top="1070" Width="527" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4746" Canvas.Top="1453" Width="277" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="4551" Canvas.Top="1921" Width="939" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
+        <Labels:Pipe Canvas.Left="4596" Canvas.Top="1453" Width="382" Color="Water" StatusComponent="529-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="4506" Canvas.Top="1921" Width="939" Color="Water" StatusComponent="470-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -287,13 +286,14 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Canvas.Left="7825" Canvas.Top="1728" PipeHeight="Medium" Width="130" StatusComponent="544-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="7825" Canvas.Top="1721" PipeHeight="Medium" Width="130" StatusComponent="544-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Canvas.Left="4360" Canvas.Top="1767" Width="83" Color="Water" StatusComponent="457-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <local:P020 Canvas.Left="54" Canvas.Top="331" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
 
         <local:P230 d:CacheMode="BitmapCache" Canvas.Left="1206" Canvas.Top="928" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P288 d:CacheMode="BitmapCache" Canvas.Left="2600" Canvas.Top="1861" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P288 d:CacheMode="BitmapCache" Canvas.Left="2747" Canvas.Top="1897" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P430 d:CacheMode="BitmapCache" Canvas.Left="2858" Canvas.Top="240" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P450 d:CacheMode="BitmapCache" Canvas.Left="3581" Canvas.Top="1107" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P450 d:CacheMode="BitmapCache" Canvas.Left="3431" Canvas.Top="1107" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P464 d:CacheMode="BitmapCache" Canvas.Left="4997" Canvas.Top="34" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P474 d:CacheMode="BitmapCache" Canvas.Left="4995" Canvas.Top="1353" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P510 d:CacheMode="BitmapCache" Canvas.Left="6235" Canvas.Top="692" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
