--- a/Prevu.Synoptics.V3085_Anviplas/P474.xaml
+++ b/Prevu.Synoptics.V3085_Anviplas/P474.xaml
@@ -94,7 +94,7 @@
             VerticalAlignment="Center" 
             JumpFromLabel="470-01-MA1" 
             JumpToLabel="444-01-MA1" Direction="Left" Canvas.Left="177" Canvas.Top="250"/>
-        <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D474_FP350" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="888" Canvas.Top="262" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="474-VIEW" DetailsPageName="D474" HideComponentName="True" HorizontalAlignment="Left" Canvas.Left="888" Canvas.Top="262" VerticalAlignment="Center"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="492-01-MA1" Canvas.Left="1150" Canvas.Top="748"/>
@@ -133,7 +133,9 @@
         <Machines:SCW_ScrewConveyor_straight Canvas.Left="854" Canvas.Top="701" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:DeviceLabel 
             ComponentName="490-01-MA1" Canvas.Left="854" Canvas.Top="726" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-    <Labels:DeviceLabel 
+        <Labels:DeviceLabel 
           ComponentName="474-20-VB1" Canvas.Left="1140" Canvas.Top="344" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-  </Canvas>
+        <Labels:DeviceLabel 
+        ComponentName="474-01-YA1" Canvas.Left="725" Canvas.Top="631" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+    </Canvas>
 </UserControl>
